k8s/kafdrop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: kub-project
spec:
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop:latest
        ports:
        - containerPort: 9000
