k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kub-project
spec:
  selector:
    matchLabels:
      app: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - image: bitnami/kafka:latest
        name: kafka
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 9092
          name: kafka
        volumeMounts:
        - name: kafka-persistent-storage
          mountPath: /bitnami/kafka
        readinessProbe:
          exec:
            command:
            - kafka-topics.sh
            - --bootstrap-server
            - localhost:9092
            - --list
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - kafka-topics.sh
            - --bootstrap-server
            - localhost:9092
            - --list
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
      - name: kafka-persistent-storage
        persistentVolumeClaim:
          claimName: kafka-pvc
