k8s/kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: kub-project
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30900
  selector:
    app: kafdrop
