k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kub-project
spec:
  ports:
  - port: 9092
    targetPort: 9092
  selector:
    app: kafka
