k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kub-project
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
